syntax = "proto3";

package hyperlane.ism.v1;

// MessageIdMultiSig ISM for a specific origin
message MessageIdMultiSig {
  // Validator pub keys
  repeated string validator_pub_keys = 1;
  // number of validators required
  uint32 threshold = 2;
}